--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,7 @@ dependencies {
     implementation 'com.android.support:cardview-v7:28.+'
     implementation 'com.firebaseui:firebase-ui-database:4.1.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
-    implementation 'com.squareup.okhttp3:okhttp:3.11.0'
+    //implementation 'com.squareup.okhttp3:okhttp:3.11.0'
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.7.+'
 }
 
